fixed layout issues, started workstep4 of the wizard, import data is now collected, call to the rdb2rdf still needs to be done

--- a/src/public/css/mlsam-layout.less
+++ b/src/public/css/mlsam-layout.less
@@ -84,7 +84,7 @@ body {
 
 /* --- settings for the wizard page                     --- */
 #main-area {
-  margin-top:10px;
+  margin-top:5px;
 }
 
 #wizard-headline {
@@ -135,7 +135,25 @@ body {
     } 
   }
   
+  
+  .lead-smaller {
+    font-size:17px;
+    margin-bottom:7px;
+  }
+
+  .list-group {
+     margin-bottom:0px;
+   
+    .list-group-item {
+       padding-top:5px;
+       padding-bottom:4px;
+       padding-right:5px;
+       padding-left:7px;
+       font-size:11px;   
+    }
+  }  
 }
+
 
 
 
